fix click circle z-index99

--- a/styles.css
+++ b/styles.css
@@ -214,6 +214,7 @@ p {
   border-radius: 50%;
   border: 1px solid #000;
   position: absolute;
+  z-index: 99;
   transform: scale(2);
 }
 
